--- a/Unit 3 - Logistic Regression/Predicting Parole Violators.ipynb
+++ b/Unit 3 - Logistic Regression/Predicting Parole Violators.ipynb
@@ -44,12 +44,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data.frame':\t675 obs. of  9 variables:\n",
+      " $ male             : int  1 0 1 1 1 1 1 0 0 1 ...\n",
+      " $ race             : int  1 1 2 1 2 2 1 1 1 2 ...\n",
+      " $ age              : num  33.2 39.7 29.5 22.4 21.6 46.7 31 24.6 32.6 29.1 ...\n",
+      " $ state            : int  1 1 1 1 1 1 1 1 1 1 ...\n",
+      " $ time.served      : num  5.5 5.4 5.6 5.7 5.4 6 6 4.8 4.5 4.7 ...\n",
+      " $ max.sentence     : int  18 12 12 18 12 18 18 12 13 12 ...\n",
+      " $ multiple.offenses: int  0 0 0 0 0 0 0 0 0 0 ...\n",
+      " $ crime            : int  4 3 3 1 1 4 3 1 3 2 ...\n",
+      " $ violator         : int  0 0 0 0 0 0 0 0 0 0 ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "parole <- read.csv('parole.csv')\n",
+    "str(parole)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      male             race            age            state      \n",
+       " Min.   :0.0000   Min.   :1.000   Min.   :18.40   Min.   :1.000  \n",
+       " 1st Qu.:1.0000   1st Qu.:1.000   1st Qu.:25.35   1st Qu.:2.000  \n",
+       " Median :1.0000   Median :1.000   Median :33.70   Median :3.000  \n",
+       " Mean   :0.8074   Mean   :1.424   Mean   :34.51   Mean   :2.887  \n",
+       " 3rd Qu.:1.0000   3rd Qu.:2.000   3rd Qu.:42.55   3rd Qu.:4.000  \n",
+       " Max.   :1.0000   Max.   :2.000   Max.   :67.00   Max.   :4.000  \n",
+       "  time.served     max.sentence   multiple.offenses     crime      \n",
+       " Min.   :0.000   Min.   : 1.00   Min.   :0.0000    Min.   :1.000  \n",
+       " 1st Qu.:3.250   1st Qu.:12.00   1st Qu.:0.0000    1st Qu.:1.000  \n",
+       " Median :4.400   Median :12.00   Median :1.0000    Median :2.000  \n",
+       " Mean   :4.198   Mean   :13.06   Mean   :0.5363    Mean   :2.059  \n",
+       " 3rd Qu.:5.200   3rd Qu.:15.00   3rd Qu.:1.0000    3rd Qu.:3.000  \n",
+       " Max.   :6.000   Max.   :18.00   Max.   :1.0000    Max.   :4.000  \n",
+       "    violator     \n",
+       " Min.   :0.0000  \n",
+       " 1st Qu.:0.0000  \n",
+       " Median :0.0000  \n",
+       " Mean   :0.1156  \n",
+       " 3rd Qu.:0.0000  \n",
+       " Max.   :1.0000  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(parole)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,12 +119,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "78"
+      ],
+      "text/latex": [
+       "78"
+      ],
+      "text/markdown": [
+       "78"
+      ],
+      "text/plain": [
+       "[1] 78"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sum(parole$violator)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,13 +155,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "State\n",
+    "Crime"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,13 +176,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The output becomes similar to that of the table() function applied to that variable correcto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,12 +207,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "set.seed(144)\n",
+    "library(caTools)\n",
+    "split = sample.split(parole$violator, SplitRatio = 0.7)\n",
+    "train = subset(parole, split == TRUE)\n",
+    "test = subset(parole, split == FALSE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "70% to the training set, 30% to the testing set correcto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,13 +237,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "The exact same training/testing set split as the first execution of [1]-[5] correcto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,13 +253,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "A different training/testing set split from the first execution of [1]-[5] correcto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,13 +269,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "A different training/testing set split from the first execution of [1]-[5] correcto"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,12 +292,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "glm(formula = violator ~ ., family = \"binomial\", data = train)\n",
+       "\n",
+       "Deviance Residuals: \n",
+       "    Min       1Q   Median       3Q      Max  \n",
+       "-1.4721  -0.5101  -0.3500  -0.2544   2.8135  \n",
+       "\n",
+       "Coefficients:\n",
+       "                   Estimate Std. Error z value Pr(>|z|)    \n",
+       "(Intercept)        0.131089   1.122135   0.117 0.907002    \n",
+       "male              -0.097159   0.386349  -0.251 0.801443    \n",
+       "race               1.100485   0.363914   3.024 0.002494 ** \n",
+       "age               -0.005499   0.014713  -0.374 0.708598    \n",
+       "state             -0.880227   0.160731  -5.476 4.34e-08 ***\n",
+       "time.served       -0.233847   0.111264  -2.102 0.035576 *  \n",
+       "max.sentence      -0.075215   0.049650  -1.515 0.129797    \n",
+       "multiple.offenses  1.334460   0.358717   3.720 0.000199 ***\n",
+       "crime             -0.004805   0.138482  -0.035 0.972321    \n",
+       "---\n",
+       "Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1\n",
+       "\n",
+       "(Dispersion parameter for binomial family taken to be 1)\n",
+       "\n",
+       "    Null deviance: 340.04  on 472  degrees of freedom\n",
+       "Residual deviance: 295.44  on 464  degrees of freedom\n",
+       "AIC: 313.44\n",
+       "\n",
+       "Number of Fisher Scoring iterations: 5\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ModelParole <- glm(violator ~ . , data=train, family ='binomial')\n",
+    "summary(ModelParole)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,12 +355,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl class=dl-horizontal>\n",
+       "\t<dt>(Intercept)</dt>\n",
+       "\t\t<dd>1.14006913392526</dd>\n",
+       "\t<dt>male</dt>\n",
+       "\t\t<dd>0.907411512901286</dd>\n",
+       "\t<dt>race</dt>\n",
+       "\t\t<dd>3.00562392331014</dd>\n",
+       "\t<dt>age</dt>\n",
+       "\t\t<dd>0.994516431219202</dd>\n",
+       "\t<dt>state</dt>\n",
+       "\t\t<dd>0.414688744162607</dd>\n",
+       "\t<dt>time.served</dt>\n",
+       "\t\t<dd>0.791482814288685</dd>\n",
+       "\t<dt>max.sentence</dt>\n",
+       "\t\t<dd>0.927544144759191</dd>\n",
+       "\t<dt>multiple.offenses</dt>\n",
+       "\t\t<dd>3.79794349443393</dd>\n",
+       "\t<dt>crime</dt>\n",
+       "\t\t<dd>0.995206490585758</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[(Intercept)] 1.14006913392526\n",
+       "\\item[male] 0.907411512901286\n",
+       "\\item[race] 3.00562392331014\n",
+       "\\item[age] 0.994516431219202\n",
+       "\\item[state] 0.414688744162607\n",
+       "\\item[time.served] 0.791482814288685\n",
+       "\\item[max.sentence] 0.927544144759191\n",
+       "\\item[multiple.offenses] 3.79794349443393\n",
+       "\\item[crime] 0.995206490585758\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "(Intercept)\n",
+       ":   1.14006913392526male\n",
+       ":   0.907411512901286race\n",
+       ":   3.00562392331014age\n",
+       ":   0.994516431219202state\n",
+       ":   0.414688744162607time.served\n",
+       ":   0.791482814288685max.sentence\n",
+       ":   0.927544144759191multiple.offenses\n",
+       ":   3.79794349443393crime\n",
+       ":   0.995206490585758\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      (Intercept)              male              race               age \n",
+       "        1.1400691         0.9074115         3.0056239         0.9945164 \n",
+       "            state       time.served      max.sentence multiple.offenses \n",
+       "        0.4146887         0.7914828         0.9275441         3.7979435 \n",
+       "            crime \n",
+       "        0.9952065 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "exp(ModelParole$coefficients) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Our model predicts that a parolee who committed multiple offenses has 5.01 times higher odds of being a violator than a parolee who did not commit multiple offenses but is otherwise identical. \n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -245,13 +446,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "log(odds) = -4.2411574 + 0.3869904*male + 0.8867192*race - 0.0001756*age + 0.4433007*state2 + 0.8349797*state3 - 3.3967878*state4 - 0.1238867*time.served + 0.0802954*max.sentence + 1.6119919*multiple.offenses + 0.6837143*crime2 - 0.2781054*crime3 - 0.0117627*crime4. This parolee has male=1, race=1, age=50, state2=0, state3=0, state4=0, time.served=3, max.sentence=12, multiple.offenses=0, crime2=1, crime3=0, crime4=0. We conclude that log(odds) = -1.700629.\n",
+    "\n",
+    "Therefore, the odds ratio is exp(-1.700629) = 0.183, and the predicted probability of violation is 1/(1+exp(1.700629)) = 0.154."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,12 +485,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.668889499703826"
+      ],
+      "text/latex": [
+       "0.668889499703826"
+      ],
+      "text/markdown": [
+       "0.668889499703826"
+      ],
+      "text/plain": [
+       "[1] 0.6688895"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "    Min.  1st Qu.   Median     Mean  3rd Qu.     Max. \n",
+       "0.004442 0.043030 0.089760 0.128200 0.149300 0.668900 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "predict <- predict(ModelParole, newdata = test, type='response')\n",
+    "max(predict)\n",
+    "summary(predict)"
+   ]
   },
   {
    "cell_type": "markdown",
